syntax = "proto3";
option csharp_namespace = "SimpleSchedulerBlazor.ProtocolBuffers.Types";
package SimpleSchedulerBlazorProtocolBuffers;

import "google/protobuf/timestamp.proto";

message NullableInt64 {
	bool HasValue = 1;
	sint64 Value = 2;
}

message NullableTimestamp {
	bool HasValue = 1;
	google.protobuf.Timestamp Value = 2;
}

message NullableString {
	bool HasValue = 1;
	string Value = 2;
}

message NullableTimeSpan {
	bool HasValue = 1;
	sint32 Hour = 2;
	sint32 Minute = 3;
	sint32 Second = 4;
	sint32 Millisecond = 5;
}

message UniqueIdentifier {
	string Value = 1;
}
